[gd_scene load_steps=3 format=3 uid="uid://c81wbqt5hm8l3"]

[ext_resource type="Script" uid="uid://40pj8bklhl67" path="res://scripts/ui/inventory_ui.gd" id="1_s6ek7"]
[ext_resource type="PackedScene" uid="uid://nc2hodxlhoyt" path="res://scenes/ui/ItemSlot.tscn" id="2_avmd0"]

[node name="Inventory" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_s6ek7")
slot_scene = ExtResource("2_avmd0")

[node name="Window" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(400, 400)
layout_mode = 0
offset_right = 886.0
offset_bottom = 557.0

[node name="HBoxContainer" type="HBoxContainer" parent="Window"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Window/HBoxContainer"]
layout_mode = 2

[node name="Inventory" type="Label" parent="Window/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="SlotsGrid" type="GridContainer" parent="Window/HBoxContainer/VBoxContainer"]
layout_mode = 2
columns = 4

[node name="Buttons" type="HBoxContainer" parent="Window/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Sell" type="Button" parent="Window/HBoxContainer/VBoxContainer/Buttons"]
layout_mode = 2
text = "Sell"

[node name="CloseButton" type="Button" parent="Window/HBoxContainer/VBoxContainer/Buttons"]
layout_mode = 2
text = "Close"

[node name="VBoxContainer2" type="VBoxContainer" parent="Window/HBoxContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2

[node name="ItemDetails" type="VBoxContainer" parent="Window/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="Icon" type="TextureRect" parent="Window/HBoxContainer/VBoxContainer2/ItemDetails"]
layout_mode = 2

[node name="ItemName" type="Label" parent="Window/HBoxContainer/VBoxContainer2/ItemDetails"]
layout_mode = 2

[node name="ItemDesc" type="Label" parent="Window/HBoxContainer/VBoxContainer2/ItemDetails"]
layout_mode = 2

[node name="MoneyLabel" type="Label" parent="Window/HBoxContainer/VBoxContainer2"]
layout_mode = 2
